# goit-pythonweb-hw-12

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml
alembic/: env.py
docs/: conf.py  index.rst
docs/api/: auth.rst  contacts.rst  index.rst
docs/conf/: config.rst  mail.rst
docs/database/: db.rst  models.rst
docs/repository/: contacts.rst  users.rst
docs/services/: auth.rst  cloudinary_service.rst  email.rst  limiter.rst
migrations/: env.py
src/: main.py  schemas.py
src/api/: auth.py  contacts.py  deps.py
src/conf/: config.py  mail.py
src/database/: db.py  models.py  session.py
src/repository/: contacts.py  users.py
src/schemas/: __init__.py  auth.py
src/services/: auth.py  cloudinary_service.py  email.py  limiter.py
src/utils/: password.py
tests/: conftest.py  init_db.py  test_auth.py  test_contacts.py  test_rate_limit.py  utils.py
